@@ -2,12 +2,14 @@
 #
 # See 'wizhelp config parameters' for more information. 
 #
-# -- Default filenames for the database
-#    If you changed GAMENAME in mush.config, change these as well:
+# -- Default filenames for the database these are now define in
+#    mush.config but can also be set here for backward compatibility.
+#    If you uncomment them and changed GAMENAME in mush.config, 
+#    change these as well:
 #
-database_home	data
-crash_database	netmush.db.CRASH
-gdbm_database	netmush.gdbm
+#database_home	data
+#crash_database	netmush.db.CRASH
+#gdbm_database	netmush.gdbm
 #
 # -- Enable mail and comsys modules.
 #
